--- a/styles/style.css
+++ b/styles/style.css
@@ -31,15 +31,17 @@
     background-color: #E6533C;
     padding: 11px 28px;
     border-radius: 30px;
+    border: none;
 }
 
 /* header styles */
 .header{
     background-color: #000000;
+    
 }
 .brand h1{
     color: #E6533C;
-    font-weight: 800;
+    font-weight: 900;
     font-size: 29px;
     font-style: italic;
 }
@@ -47,6 +49,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+.nav i{
+    display: none;
 }
 .menu{
     display: flex;
@@ -97,9 +102,7 @@
     font-size: 16px;
     margin: 30px 0;
 }
-.banner-image{
-    width: 40%;
-}
+
 .banner-content .secondary{
     font-size: 16px;
     font-weight: 600;
@@ -110,53 +113,109 @@
     border-radius: 30px;
     margin-left: 10px;
 }
-
 .banner-image{
+    width: 40%;
     margin-top: -20px;
+    position: relative;
 }
+
 .banner-image img{
     width: 20.6rem;
     height: 34rem;
 }
 
+.workout-cart{
+    width: 11.3rem;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.1);
+    padding: 15px 0 15px 30px;
+    position: absolute;
+    top: 8rem;
+    right: 3.1rem;
+}
 
-/* .banner .video{
-    /* padding: 10px;
-    width: 10rem;
-    background: rgba(255, 255, 255, 0.3);
-    justify-content: space-around;
-    filter: 20px;
-    display: flex;
-    align-items: center;
-
-    height: 5rem;
-    backdrop-filter: blur(7px); */
-    /* background: rgba(255, 255, 255, 0.3); */
-    /* backdrop-filter: sepia(90%); */
-    
-/* }
-.video .circle{
-    border-radius: 50%;
+.workout-cart h1{
+    color: rgb(255, 255, 255);
+    font-size: 2rem;
+    font-weight: 900;
+}
+.workout-cart p{
+    color: rgba(255, 255, 255, 0.65);
+    font-size: 12px;
+    font-weight: 400;
+}
+.video-cart .circle{
     background-color: red;
+    border-radius: 50%;
     width: 30px;
     height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-.c-right{
+.video-cart{
+    width: 12rem;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    padding: 15px 15px;
+    position: absolute;
+    bottom: 58px;
+    left: -93px;
     color: #FFFFFF;
 }
-.c-right p{
+.video-cart .tutorial h3{
+    color: rgb(250, 250, 249);
+    font-size: 20px;
+    font-weight: 900;
+}
+.video-cart .tutorial p{
     color: rgba(239, 237, 232, 0.65);
     font-size: 14px;
-} */ 
-.banner-image{
-    background-image: url("../images/banner-image.png");
-    background-repeat: no-repeat;
-
+    font-weight: 400;
+}
+.video-cart .circle i{
+    display: none;
 }
 
-.workout{
-    background: rgba(255, 255, 255, 0.1);
-    color: #FFFFFF;
-    backdrop-filter: blur(1px);
-    
+
+@media screen and (max-width: 576px) {
+    .nav .menu{
+        display: none;
+    }
+    .nav i{
+        display: block;
+        color: white;
+    }
+    .banner{
+        flex-direction: column;
+    }
+    .banner-image{
+        margin-top: 2.5rem;
+    }
+    .banner-content {
+        width: 100%;
+    }
+    .workout-cart {
+        top: 3.5rem;
+        right: -14.3rem;
+    }
+    .video-cart{
+        width: 11rem;
+        left: 0;
+        bottom: 15.7rem;
+    }
+    .video-cart .circle i{
+        display: block;
+        color: #FFFFFF;
+    }
+
 }
