--- a/styles/style.css
+++ b/styles/style.css
@@ -33,11 +33,22 @@
     border-radius: 30px;
     border: none;
 }
+.title{
+    font-size: 2rem;
+    font-weight: 900;
+    color: var(--white);
+}
+.description{
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+}
 
 /* header styles */
 .header{
     background-color: #000000;
-    
+    /* background: linear-gradient(180.00deg, rgb(17, 17, 17,),rgba(119, 119, 119,0) 100%); */
 }
 .brand h1{
     color: #E6533C;
@@ -147,15 +158,7 @@
     font-size: 12px;
     font-weight: 400;
 }
-.video-cart .circle{
-    background-color: red;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 .video-cart{
     width: 12rem;
     border: 1px solid rgba(255, 255, 255, 0.1);
@@ -166,11 +169,20 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    padding: 15px 15px;
+    padding: 15px;
     position: absolute;
     bottom: 58px;
     left: -93px;
     color: #FFFFFF;
+}
+.video-cart .circle{
+    background-color: red;
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .video-cart .tutorial h3{
     color: rgb(250, 250, 249);
@@ -186,6 +198,73 @@
     display: none;
 }
 
+main{
+    background-color: #000000;;
+}
+.habit-wrapper{
+    padding-top: 5rem;
+}
+.habit-wrapper .habit-titlebar{
+    text-align: center;
+}
+.habit-titlebar h1{
+    font-size: 2rem;
+    font-weight: 900;
+    color: var(--white);
+}
+.habit-titlebar p{
+    font-size: 13px;
+    color: rgba(255, 255, 255, 0.5);
+    margin: 12px 0 2.5rem;
+}
+.exercise-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.exercise-container .row{
+    text-align: center;
+    max-width: 13.5rem;
+}
+.exercise-container .row img{
+    border-radius: 50%;
+    border: 5px solid #191919;
+}
+.exercise-container h6{
+    color: var(--white);
+    font-size: 16px;
+    font-weight: 600;
+    margin: 1.5rem 0 0.5rem;
+}
+.exercise-container p{
+    font-size: 13px;
+    color: var(--gray1);
+}
+
+
+.run-wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 5rem auto 0;
+    background-color: rgb(34, 34, 34);
+    padding:2rem 2rem;
+    border-radius: 1rem;
+}
+.run-content{
+    width: 40%;
+}
+.run-content p{
+    margin: 1rem 0;   
+}
+.run-image{
+    width: 35%;
+}
+.run-image img{
+    width: 100%;
+    
+}
+
 
 @media screen and (max-width: 576px) {
     .nav .menu{
@@ -195,13 +274,13 @@
         display: block;
         color: white;
     }
-    .banner{
+    .banner, .exercise-container, .run-wrapper{
         flex-direction: column;
     }
     .banner-image{
         margin-top: 2.5rem;
     }
-    .banner-content {
+    .banner-content, .run-content, .run-image {
         width: 100%;
     }
     .workout-cart {
@@ -216,6 +295,12 @@
     .video-cart .circle i{
         display: block;
         color: #FFFFFF;
+    }
+    .exercise-container, .run-wrapper{
+        gap: 2.5rem;
+    }
+    .run-content, button{
+        width: 100%;
     }
 
 }
