--- a/styles/style.css
+++ b/styles/style.css
@@ -266,6 +266,52 @@ main{
 }
 
 
+.training-titlebar p{
+    width: 38rem;
+    margin: 1rem 0 2rem;
+}
+.training-images .row1{
+    display: grid;
+    grid-template-columns: 25% 50% 25%;
+    grid-template-rows: repeat(3, 200px);
+}
+
+.row1 .img1, .row1 .img2, .row1 .img3{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.training-images .row1 .img1{
+    background: linear-gradient(0deg, rgba(2,173,231,0.5), rgba(2,173,231,0.5)), url('../images/exercise1.jpg');
+    /* background-color: green; */
+
+}
+.training-images .row1 .img2{
+    background-image: url('../images/exercise2.png');
+}
+.training-images .row1 .img3{
+    background-image: url('../images/exercise3.png');
+}
+.training-images .row1 .img1, .training-images .row1 .img2, .training-images .row1 .img3{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.img4{
+    height: 215px;
+    background-color: rgba(6, 255, 210, 0.5);
+    background-origin: content-box;
+}
+.img4 img{
+    height: 100%;
+}
+
+.training-images .row1 p{
+    color: var(--white);
+}
+
 @media screen and (max-width: 576px) {
     .nav .menu{
         display: none;
@@ -299,7 +345,7 @@ main{
     .exercise-container, .run-wrapper{
         gap: 2.5rem;
     }
-    .run-content, button{
+    .run-content, .btn{
         width: 100%;
     }
 
