--- a/styles/style.css
+++ b/styles/style.css
@@ -99,6 +99,7 @@
     margin-top: 100px;
 }
 .banner-content h1{
+    font-weight: 900;
     font-size: 3rem;
     color: #FFFFFF;
     line-height: 55px;
@@ -112,6 +113,7 @@
     color: var(--gray2);
     font-size: 16px;
     margin: 30px 0;
+    line-height: 22px;
 }
 
 .banner-content .secondary{
@@ -136,7 +138,7 @@
 }
 
 .workout-cart{
-    width: 11.3rem;
+    width: 11rem;
     box-sizing: border-box;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 12px;
@@ -160,7 +162,7 @@
 }
 
 .video-cart{
-    width: 12rem;
+    width: 11rem;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 12px;
     backdrop-filter: blur(20px);
@@ -169,14 +171,14 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    padding: 15px;
+    padding: 20px 15px;
     position: absolute;
     bottom: 58px;
     left: -93px;
     color: #FFFFFF;
 }
 .video-cart .circle{
-    background-color: red;
+    background-color: rgba(230, 83, 60, 1);
     border-radius: 50%;
     width: 30px;
     height: 30px;
@@ -213,9 +215,11 @@ main{
     color: var(--white);
 }
 .habit-titlebar p{
+    width: 54%;
+    line-height: 19px;
     font-size: 13px;
     color: rgba(255, 255, 255, 0.5);
-    margin: 12px 0 2.5rem;
+    margin: 12px auto 2.5rem;
 }
 .exercise-container{
     display: flex;
@@ -269,19 +273,13 @@ main{
     margin-top: 50px;
 }
 .training-titlebar p{
-    width: 100%;
+    width: 57%;
     margin: 1rem 0 2rem;
 }
 .training-images .row1{
     display: grid;
     grid-template-columns: 25% 50% 25%;
     grid-template-rows: repeat(1, 200px);
-}
-
-.row1 .img1, .row1 .img2, .row1 .img3{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
 }
 
 .training-images .row1 .img1{
@@ -297,6 +295,7 @@ main{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding: 25px 0 0 30px;
 }
 .training-images .row1 .img3{
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/exercise3.png');
@@ -304,7 +303,9 @@ main{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    padding: 150px 0 0 30px;
 }
+
 
 .training-images .row1 p{
     color: var(--white);
@@ -315,6 +316,32 @@ main{
     grid-template-columns: 40% auto 30%;
     grid-template-rows: repeat(1, 200px);
     color: #FFFFFF;
+}
+
+.training-images .row2 .img4{
+    background-image: url("../images/exercise4.png");
+    filter: brightness(80%);
+    padding: 150px 0 0 30px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.training-images .row2 .img5{
+    background-image:linear-gradient(0deg, rgba(66, 255, 0, 0.3), rgba(66, 255, 0, 0.3)), url("../images/exercise5.jpg");
+    /* filter: brightness(80%); */
+    padding: 150px 0 0 30px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.training-images .row2 .img6{
+    background-image:linear-gradient(0deg, rgba(0, 71, 255, 0.3), rgba(0, 71, 255, 0.3)), url("../images/exercise6.jpg");
+    /* filter: brightness(80%); */
+    padding: 150px 0 0 30px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 150px 0 0 30px;
 }
 
 .row2 img{
@@ -544,10 +571,14 @@ td{
     .banner-image{
         margin-top: 2.5rem;
     }
+    .btn-club{
+        display: none;
+    }
     .banner-content, .run-content, .run-image, .fitness-column, .about-column, .service-column {
         width: 100%;
     }
     .banner-content .secondary, .primary{
+        width: 9.5rem;
         padding: 11px 18px;
     }
     .workout-cart {
@@ -568,7 +599,7 @@ td{
     .exercise-container, .run-wrapper{
         gap: 2.5rem;
     }
-    .run-content, .btn, .training-titlebar p, .bmi-chart{
+    .run-content, .btn, .training-titlebar p, .bmi-chart, .habit-titlebar p{
         width: 100%;
     }
     .training-images .row1{
@@ -580,11 +611,12 @@ td{
     .training-images .row1 .img1{
         padding-top: 114px;
     }
-    .training-images .row1 .img3{
+    .img-para3, .training-images .row1 .img3, .training-images .row2 .img6{
         display: none;
     }
-    .img-para3{
-        display: none;
+    .training-images .row1 .img1, .training-images .row1 .img2, .training-images .row2 .img4, .training-images .row2 .img5{
+        font-size: 14px;
+        padding: 110px 0 0 12px
     }
     .row2{
         grid-template-columns: 45% 55%;
