--- a/styles/style.css
+++ b/styles/style.css
@@ -47,8 +47,7 @@
 
 /* header styles */
 .header{
-    background-color: #000000;
-    /* background: linear-gradient(180.00deg, rgb(17, 17, 17,),rgba(119, 119, 119,0) 100%); */
+    background-image: linear-gradient(to bottom, #000000, #090909, #111111, #161616, #1b1b1b, #1b1b1b, #1b1b1b, #1b1b1b, #161616, #111111, #090909, #000000);
 }
 .brand h1{
     color: #E6533C;
@@ -67,7 +66,7 @@
 .menu{
     display: flex;
     gap: 2.6rem;
-    border: 1px solid #191919;
+    border: 1px solid rgba(255, 255, 255, 0.1);;
     border-radius: 20px;
 }
 .menu li{
@@ -481,12 +480,11 @@ td{
 }
 .membership h1{
     color: #FFFFFF;
-    font-size: 43px;
+    font-size: 35px;
     padding: 0.5rem 0 2rem;
 }
 .membership-wrap{
     padding: 0rem 0 3rem;
-    /* background-color: #555454; */
     display: flex;
     justify-content: space-between;
     gap: 30px;
@@ -495,19 +493,19 @@ td{
 .card{
     width: 32%;
     padding: 2rem;
-    background-color: #555454;
+    background-color: #222222;
     border-radius: 10px;
 }
 .card h1{
     color: #FFFFFF;
-    font-size: 35px;
+    font-size: 30px;
     font-weight: 800;
     border-bottom: 1px solid #312c2c;
     padding-bottom: 1rem;
 }
 .card h2{
     color: #FFFFFF;
-    font-size: 28px;
+    font-size: 25px;
     font-weight: 700;
     padding-top: 1rem;
 }
@@ -516,7 +514,7 @@ td{
     color: #d1cdcdc0;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    font-size: 20px;
+    font-size: 17px;
 }
 .card ul{
     padding-left: 1.4rem;
@@ -526,12 +524,15 @@ td{
     list-style:decimal;
     margin: 10px 0;
     font-size: 18px;
-    color: #0e0b0b;
+    color: #cbbebe;
 }
 .card-btn{
     width: 100%;
     padding: 15px;
     font-size: 18px;
+    background-color: #FFFFFF;
+    border: none;
+    border-radius: 5px;
 }
 .card-btn:hover{
     color: #FFFFFF;
@@ -663,8 +664,8 @@ td{
         display: none;
     }
     .training-images .row1 .img1, .training-images .row1 .img2, .training-images .row2 .img4, .training-images .row2 .img5{
-        font-size: 14px;
-        padding: 110px 0 0 12px
+        font-size: 12px;
+        padding: 108px 0 0 12px;
     }
     .row2{
         grid-template-columns: 45% 55%;
@@ -689,6 +690,11 @@ td{
     .team-titlebar p{
         width: 83%;
     }
-
+    .membership h1{
+        font-size: 28px;
+    }
+    .about-column h3, .service-column h3{
+        margin-bottom: 1.5rem;
+    }
 
 }
